--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@angular/service-worker": "^16.2.0",
+    "dexie": "^3.2.4",
     "firebase": "^10.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
